# amd-kernels

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  Makefile  README.md  attention_kernel.hip  attention_kernel_aiter_v3.cpp  attention_kernel_indexology.ipynb  bench_table.py  opus.hpp  pyproject.toml  quick_test.py  rocprof_isa_only.sh  rocprof_profile.sh  runner.py  setup.py  some.txt  thread_mapping.ipynb
asm/: README.md
benchmark/: bench_table.py  runner.py
csrc/: attention_api.cpp  attention_kernel.hip  attention_rtna.hip  attention_rtne.hip  attention_rtz.hip
docs/: attention_kernel_indexology.ipynb  thread_mapping.ipynb
examples/: basic.py  lite.py
lds_queue_test/: .gitignore  Makefile  kernel.hip  profile.sh  runner.py
moonmath_attention/: __init__.py  _kernel.py  lite.py
tests/: test_attention.py
tools/: disassemble_aiter_v3.sh  isa_report.py  rocprof_attn.sh  rocprof_isa_only.sh  rocprof_profile.sh
