[build-system]
requires = ["setuptools>=61", "wheel", "torch==2.12.0+rocm7.2", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "moonmath-attention"
version = "0.1.0"
description = "Hand-tuned bf16 forward attention kernel for AMD CDNA3 (MI300X)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "torch==2.12.0+rocm7.2",
]

[tool.setuptools]
packages = ["moonmath_attention"]

[tool.uv.sources]
torch = [{ index = "pytorch-rocm72" }]

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"


# Build requires ROCm PyTorch 2.x and hipcc on PATH.
# torch is declared in [build-system].requires so the package builds with
# build isolation (uv resolves it from the pytorch-rocm72 index):
#   uv pip install -e .
# To reuse an already-installed torch and skip re-downloading it into the
# isolated build env, you can still pass --no-build-isolation:
#   uv pip install -e . --no-build-isolation
